# npu-mlir

./: .gitmodules  CMakeLists.txt  README.md
backend/include/llvm/IR/: CMakeLists.txt  IntrinsicsRISCVnpuExt.td  IntrinsicsnpuExt.td
backend/llvm/lib/Analysis/: CMakeLists.txt
backend/llvm/lib/AsmParser/: CMakeLists.txt
backend/llvm/lib/Bitcode/Reader/: CMakeLists.txt
backend/llvm/lib/Bitcode/Writer/: CMakeLists.txt
backend/llvm/lib/CodeGen/: CMakeLists.txt
backend/llvm/lib/CodeGen/AsmPrinter/: CMakeLists.txt
backend/llvm/lib/CodeGen/MIRParser/: CMakeLists.txt
backend/llvm/lib/CodeGen/SelectionDAG/: CMakeLists.txt
backend/llvm/lib/IR/: CMakeLists.txt
backend/llvm/lib/IRReader/: CMakeLists.txt
backend/llvm/lib/Object/: CMakeLists.txt
backend/llvm/lib/ProfileData/: CMakeLists.txt
backend/llvm/lib/Remarks/: CMakeLists.txt
backend/llvm/lib/Transforms/IPO/: CMakeLists.txt
backend/llvm/lib/Transforms/Scalar/: CMakeLists.txt
backend/llvm/lib/Transforms/Utils/: CMakeLists.txt
backend/llvm/lib/Transforms/Vectorize/: CMakeLists.txt
cmake/: npuMLIRConfig.cmake
example/: batch_matmul.mlir  ciface.mlir  compute-accumulated.mlir  conv_2d_nchw_fchw_f32.mlir  conv_2d_nchw_fchw_i8.mlir  conv_2d_nhwc_hwcf_f32.mlir  conv_2d_nhwc_hwcf_i8.mlir  makefile  matmul-os.mlir  matmul-ws.mlir  matmul.mlir  matrix-add-scale.mlir  matrix-add.mlir  mvin-mvout.mlir  performance-test.cpp  tile-conv-igelu.mlir  tile-conv-layernorm.mlir  tile-conv-relu.mlir  tile-conv-softmax.mlir  tile-conv.mlir  tile-matmul-os.mlir  tile-matmul-ws-igelu.mlir  tile-matmul-ws-layernorm.mlir  tile-matmul-ws-relu.mlir  tile-matmul-ws-softmax.mlir  tile-matmul.mlir  tile-rect-conv.mlir  transpose.mlir
midend/: CMakeLists.txt
midend/Interfaces/buddy/Core/: Container.h
midend/Interfaces/buddy/DAP/: AudioContainer.h  DAP.h
midend/Interfaces/buddy/DAP/DSP/: Biquad.h  FIR.h  IIR.h  IIRDesign.h  Math.h  WhisperPreprocess.h  Window.h
midend/Interfaces/buddy/DIP/: DIP.h  ImageContainer.h  ImgContainer.h
midend/Interfaces/buddy/DIP/imgcodecs/: bitstrm.h  grfmt_base.h  grfmt_bmp.h  grfmt_jpeg.h  grfmt_png.h  loadsave.h  utils.h
midend/Interfaces/buddy/LLM/: TextContainer.h
midend/Interfaces/lib/: CMakeLists.txt  DAP-extend.mlir  DAP.mlir
midend/include/Dialect/Gemmini/: CMakeLists.txt  Gemmini.td
midend/include/Utils/: Utils.h
midend/include/npu-mlir-c/: Dialects.h  InitAll.h  RegisterEverything.h
midend/lib/: CMakeLists.txt  InitAll.cpp
midend/lib/CAPI/: CMakeLists.txt  Dialects.cpp  RegisterEverything.cpp
midend/lib/Conversion/: CMakeLists.txt
midend/lib/Conversion/LowerGemmini/: CMakeLists.txt  LowerGemminiPass.cpp
midend/lib/Conversion/LowerLinalgToGemmini/: LowerLinalgToGemmini.cpp
midend/lib/Dialect/Gemmini/IR/: CMakeLists.txt  GemminiDialect.cpp
midend/lib/Dialect/Gemmini/Transforms/: CMakeLists.txt  LegalizeForLLVMExport.cpp
midend/lib/Utils/: CMakeLists.txt  Utils.cpp
tools/: CMakeLists.txt
tools/npu-llc/: CMakeLists.txt
tools/npu-opt/: CMakeLists.txt  npu-opt.cpp
tools/npu-translate/: CMakeLists.txt  npu-translate.cpp
